--- a/css/style.css
+++ b/css/style.css
@@ -25,5 +25,19 @@
 
 
 /* Footer */
-
+section#footer
+{
+	background: #7CB9E8;
+	padding-bottom: 25px;
+}
+footer h1 small
+{
+	color: #000000;
+}
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+    margin-top: 40px;
+}
 /* End | Footer */
